--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ html {
     color: white;
 }
 
+div.page{
+    padding-top: 80px;
+}
+
 h1.portfo{
     font-size: xx-large;
     font-weight: 200;
@@ -29,7 +33,8 @@ a:hover{
 }
 
 .menu-bar {
-    background-color: rgb(27, 27, 27);
+    position: fixed;
+    background-color: rgb(14, 14, 14);
     width: 100%;
     min-height: 80px;
     display: flex;
