--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ div.page {
     padding-top: 80px;
 }
 
-h1.portfo {
+h1 {
     font-size: xx-large;
     font-weight: 200;
 }
@@ -40,6 +40,7 @@ a:hover {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    z-index: 5;
 }
 
 img.bk-logo {
@@ -58,4 +59,64 @@ ul.ancres {
     list-style: none;
     justify-content: space-between;
     padding: 0;
+}
+
+/* ^ code à pas toucher ^  */
+
+img.bauko-logo{
+    filter: drop-shadow(0px 0px 25px rgba(0, 0, 0, 0.7));
+}
+
+div>p {
+    font-size:x-large;
+}
+
+div.bjr-eth {
+    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+}
+
+.sc-page {
+    min-height: 700px;
+    padding: 50px;
+}
+
+.bar {
+    background-color: red;
+    width: 100%;
+    position: relative;
+    height: 15px;
+}
+
+.progress {
+    background-color: yellow;
+    position: absolute;
+    height: 15px;
+}
+
+.progress.py{
+    width: 20%;
+}
+
+.progress.js{
+    width: 0.5%;
+}
+
+.progress.cs{
+    width: 1%;
+}
+
+.progress.sql{
+    width: 15%;
+}
+
+.progress.html{
+    width: 65%;
+}
+
+.progress.php{
+    width: 10%;
+}
+
+.progress.css{
+    width: 75%;
 }
