--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ html {
     color: white;
 }
 
+p, h1, li {
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
+}
+
 div.page {
     padding-top: 80px;
 }
@@ -34,7 +38,7 @@ a:hover {
 
 .menu-bar {
     position: fixed;
-    background-color: rgb(14, 14, 14);
+    background-color: rgb(11, 11, 11);
     width: 100%;
     min-height: 80px;
     display: flex;
@@ -71,18 +75,17 @@ div>p {
     font-size:x-large;
 }
 
-div.bjr-eth {
-    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
-}
-
-.sc-page {
+/* .sc-page {
     min-height: 700px;
     padding: 50px;
-}
+} */
+
+/* progress bars  */
 
 .bar {
     background-color: red;
-    width: 100%;
+    max-width: 97%;
+    min-width: 20%;
     position: relative;
     height: 15px;
 }
@@ -110,7 +113,7 @@ div.bjr-eth {
 }
 
 .progress.html{
-    width: 65%;
+    width: 35%;
 }
 
 .progress.php{
@@ -118,5 +121,30 @@ div.bjr-eth {
 }
 
 .progress.css{
-    width: 75%;
+    width: 45%;
+}
+
+
+.item1 { grid-area: header; }
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.item4 { grid-area: right; }
+.item5 { grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main right right'
+    'menu footer footer footer footer footer';
+  gap: 10px;
+  background-color: #ffffff;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgb(16, 16, 16);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
 }
