--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,18 @@
         url(ressources/fonts/determination-mono-web-font/DeterminationSansWebRegular-369X.ttf) format('truetype');
 }
 
+::-webkit-scrollbar {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar-corner {
+    border-radius: 10px;
+}
+
 body,
 html {
     font-family: 'Determination', sans-serif;
@@ -12,6 +24,7 @@ html {
     padding: 0;
     min-height: 100vh;
     color: white;
+    overflow: overlay;
 }
 
 p, h1, li {
