--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
     border-radius: 10px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body,
 html {
     font-family: 'Determination', sans-serif;
@@ -102,17 +106,30 @@ img.star {
 
 img.bauko-logo {
     filter: drop-shadow(0px 0px 25px rgba(0, 0, 0, 0.7));
-    width: 100%;
+    width: 50%;
     height: auto;
 }
 
-img.inkcat1{
-    width: 5%;
-    margin: 50px;
+img.screen {
+    max-width: 45%;
 }
 
-img.draw{
-    width: 75%;
+img.draw {
+    width: 100%;
+}
+
+div.inkcat1 {
+    width: 128px;
+    height: 128px;
+    margin: 50px;
+    background-image: url(ressources/inkcat1.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 47%;
+}
+
+div.inkcat1:hover {
+    background-image: url(ressources/inkcat-question1.svg);
 }
 
 ul.ancres {
@@ -131,20 +148,45 @@ div>p {
 }
 
 div.sc-page {
-    padding: 50px;
+    padding: 100px;
 }
 
-div.sc1-pg1{
+div.sc1-pg1 {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), black), url(ressources/sky.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 100px;
 }
 
-div.sc1-pg2{
+div.bjr-eth {
+    text-align: left;
+}
+
+div.sc1-pg2 {
     display: flex;
     align-items: center;
-    padding: 100px;
+}
+
+div.grp-screen {
+    display: flex;
+    justify-content: space-around;
+}
+
+div.sc2-pg2 {
+    background: linear-gradient(black, rgba(0, 0, 0, 0), black), url(ressources/code.png);
+}
+
+div.sc4-pg1 {
+    background: radial-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0)), linear-gradient(black, rgba(0, 0, 0, 0), black), url(ressources/ruins.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+div.sc4-pg1 p {
+    /* padding-top: 10px; */
+    padding-bottom: 50px;
 }
 
 /* progress bars  */
@@ -228,4 +270,135 @@ span.progress.css {
     text-align: center;
     padding: 20px 0;
     font-size: 30px;
+}
+
+.carousel {
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+ul.slides {
+    display: block;
+    position: relative;
+    height: 600px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style: none;
+}
+
+.slides * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+ul.slides input {
+    display: none;
+}
+
+
+.slide-container {
+    display: block;
+}
+
+.slide-image {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0;
+    transition: all .7s ease-in-out;
+}
+
+.slide-image img {
+    width: auto;
+    height: 100%;
+}
+
+.carousel-controls {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    font-size: 100px;
+    line-height: 600px;
+    color: #fff;
+}
+
+.carousel-controls label {
+    display: none;
+    position: absolute;
+    padding: 0 20px;
+    opacity: 0;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+.slide-image:hover+.carousel-controls label {
+    opacity: 0.5;
+}
+
+.carousel-controls label:hover {
+    opacity: 1;
+}
+
+.carousel-controls .prev-slide {
+    width: 49%;
+    text-align: left;
+    left: 0;
+}
+
+.carousel-controls .next-slide {
+    width: 49%;
+    text-align: right;
+    right: 0;
+}
+
+.carousel-dots {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    z-index: 2;
+    text-align: center;
+}
+
+.carousel-dots .carousel-dot {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.5;
+    margin: 10px;
+}
+
+input:checked+.slide-container .slide-image {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1s ease-in-out;
+}
+
+input:checked+.slide-container .carousel-controls label {
+    display: block;
+}
+
+input#img-1:checked~.carousel-dots label#img-dot-1,
+input#img-2:checked~.carousel-dots label#img-dot-2,
+input#img-3:checked~.carousel-dots label#img-dot-3,
+input#img-4:checked~.carousel-dots label#img-dot-4,
+input#img-5:checked~.carousel-dots label#img-dot-5,
+input#img-6:checked~.carousel-dots label#img-dot-6 {
+    opacity: 1;
+}
+
+
+input:checked+.slide-container .nav label {
+    display: block;
 }
