--- a/styles.css
+++ b/styles.css
@@ -417,6 +417,10 @@ input:checked+.slide-container .nav label {
     display: block;
 }
 
+
+
+
+
 @media only screen and (max-width: 1440px){
     ul.slides {
         height: 60vh;
@@ -438,6 +442,10 @@ input:checked+.slide-container .nav label {
 @media only screen and (max-width: 950px){
     ul.slides {
         height: 30vh;
+    }
+
+    div.grp-screen {
+        flex-wrap: wrap;
     }
 }
 
@@ -506,7 +514,7 @@ input:checked+.slide-container .nav label {
     }
 
     div.inkcat1 {
-        margin-left: 42%;
+        margin-left: 35%;
     }
 
     div.music {
