--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ div.music {
 div.bar {
     background-color: red;
     max-width: 97%;
-    min-width: 20%;
+    min-width: 100%;
     position: relative;
     height: 15px;
 }
@@ -424,6 +424,7 @@ input:checked+.slide-container .nav label {
 .bar {
     display: block;
     height: 3px;
+    width: 25px;
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
